changed a bit structure of a project and also included Readme.md