@@ -9,7 +9,7 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 //import org.springframework.security.core.GrantedAuthority;
 //import org.springframework.security.core.authority.SimpleGrantedAuthority;
-
+import  com.ironhack.birdresq.enums.Role;
 import java.util.*;
 
 
@@ -25,9 +25,33 @@ public class Admin extends User {
     @NotBlank(message = "Password is required")
     private String password;
 
+    @Enumerated(EnumType.STRING)
+    private Role role;
 
+
+    @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_ADMIN"));
+        return List.of(new SimpleGrantedAuthority("ADMIN"));
+    }
+
+    @Override
+    public boolean isAccountNonExpired() {
+        return false;
+    }
+
+    @Override
+    public boolean isAccountNonLocked() {
+        return false;
+    }
+
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return false;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return false;
     }
 
     @OneToMany(mappedBy = "admin", cascade = CascadeType.ALL)
@@ -35,6 +59,13 @@ public class Admin extends User {
 
     @OneToMany(mappedBy = "admin", cascade = CascadeType.ALL)
     private Set<Volunteer> volunteers = new HashSet<Volunteer>();
+
+
+    @Override
+    public Collection<String> getRole() {
+
+        return List.of("ADMIN");
+    }
 
 
 }
